// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionTypeChooser /> should match the snapshot 1`] = `
.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  position: relative;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 80px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-right: 21px;
  padding-left: 21px;
  background-color: rgba(255,255,255,1);
  cursor: pointer;
  border-radius: 5px;
  border: 1px dashed #B0BAC9;
  border-radius: 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover {
  background-color: #E9F1FB;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(183,39,234,1);
  color: rgba(183,39,234,1);
}

<div>
  <div
    class="c0"
    data-cy="question-type-chooser"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="HoverableBox-sc-zvip6a-0 c2"
        data-cy="add-screen-button"
        display="flex"
        height="80"
        width="100%"
      >
        <div
          class="c3"
        >
          <p
            class="c4"
            color="#B727EA"
            font-weight="bold"
          >
            + Add new screen
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<QuestionTypeChooser /> should match the snapshot while being open 1`] = `
.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  position: relative;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 80px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-right: 21px;
  padding-left: 21px;
  background-color: rgba(255,255,255,1);
  cursor: pointer;
  border-radius: 5px;
  border: 1px dashed #B0BAC9;
  border-radius: 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover {
  background-color: #E9F1FB;
}

.c5 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  max-height: 350px;
  position: absolute;
  visibility: hidden;
  margin-top: 15px;
  background-color: rgba(255,255,255,1);
  border-radius: 10px;
  box-shadow: 0px 0px 50px rgba(0,0,0,0.08);
  border-radius: 10px;
  top: initial;
  bottom: initial;
}

.c6 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  padding: 16px;
  border-bottom: 1px solid #E9F1FB;
}

.c8 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 100%;
  position: relative;
}

.c9 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
  width: 100%;
  overflow: scroll;
  padding: 8px;
}

.c9::-webkit-scrollbar {
  width: 0;
}

.c10 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  padding: 8px;
  margin-bottom: 4px;
  cursor: pointer;
  border-radius: 5px;
  border-radius: 5px;
}

.c10:hover {
  background-color: #E9F1FB;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(183,39,234,1);
  color: rgba(183,39,234,1);
}

.c7 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 15px;
  font-weight: 700;
  color: #2F3850;
}

.c12 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 500;
  color: #2F3850;
}

.c11 {
  border-radius: 50%;
  background-color: #0086F8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(0,134,248,1);
  opacity: 1;
  color: #2F3850;
}

.c13 {
  border-radius: 50%;
  background-color: #B727EA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(183,39,234,1);
  opacity: 1;
  color: #2F3850;
}

.c14 {
  border-radius: 50%;
  background-color: #FFA16C;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(255,161,108,1);
  opacity: 1;
  color: #2F3850;
}

.c15 {
  border-radius: 50%;
  background-color: #2F3850;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(47,56,80,1);
  opacity: 1;
  color: #2F3850;
}

.c16 {
  border-radius: 50%;
  background-color: #00FFF7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(0,255,247,1);
  opacity: 1;
  color: #2F3850;
}

.c17 {
  border-radius: 50%;
  background-color: #808000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(128,128,0,1);
  opacity: 1;
  color: #2F3850;
}

.c18 {
  border-radius: 50%;
  background-color: #FFCF5B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(255,207,91,1);
  opacity: 1;
  color: #2F3850;
}

.c19 {
  border-radius: 50%;
  background-color: #FF7691;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(255,118,145,1);
  opacity: 1;
  color: #2F3850;
}

.c20 {
  border-radius: 50%;
  background-color: #000080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(0,0,128,1);
  opacity: 1;
  color: #2F3850;
}

.c21 {
  border-radius: 50%;
  background-color: #107969;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(16,121,105,1);
  opacity: 1;
  color: #2F3850;
}

.c22 {
  border-radius: 50%;
  background-color: #B302FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(179,2,255,1);
  opacity: 1;
  color: #2F3850;
}

.c23 {
  border-radius: 50%;
  background-color: #8CBD00;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(140,189,0,1);
  opacity: 1;
  color: #2F3850;
}

.c24 {
  border-radius: 50%;
  background-color: #D2371D;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(210,55,29,1);
  opacity: 1;
  color: #2F3850;
}

<div>
  <div
    class="c0"
    data-cy="question-type-chooser"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="HoverableBox-sc-zvip6a-0 c2"
        data-cy="add-screen-button"
        display="flex"
        height="80"
        width="100%"
      >
        <div
          class="c3"
        >
          <p
            class="c4"
            color="#B727EA"
            font-weight="bold"
          >
            + Add new screen
          </p>
        </div>
      </div>
      <div
        class="c5"
        visibility="hidden"
        width="100%"
      >
        <div
          class="c6"
        >
          <p
            class="c7"
            font-size="15px"
            font-weight="bold"
          >
            Choose type of screen
          </p>
        </div>
        <div
          class="c8"
          height="100%"
          width="100%"
        >
          <div
            class="c9"
            height="0"
            overflow="scroll"
            width="100%"
          >
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c11"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Single answer
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c13"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Multi answer
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c14"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Free Response
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c15"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Date
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c16"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Name
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c17"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Currency
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c18"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Number
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c19"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Grid
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c19"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Slider
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c20"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Information Only
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c21"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  External Link
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c17"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Feedback
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c22"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Participant Report
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c23"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Third Party Report
                </p>
              </div>
            </div>
            <div
              class="HoverableBox-sc-zvip6a-0 c10"
            >
              <div
                class="c3"
              >
                <div
                  class="c24"
                  opacity="1"
                />
                <p
                  class="c12"
                  font-weight="medium"
                >
                  Phone Text Messaging
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
